# disaster-impact

./: .gitignore  .pre-commit-config.yaml  Makefile  PAIRING.md  README.md  TABLES.md  event_Level.csv  glide_data_final.csv  impact_Data.csv  impact_data_0.json  monty_Info_metadata.csv  monty_combined_metadata.csv  pyproject.toml  taxonomies_metadata.csv  test.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
data_out/glide/: .~lock.glide_consolidated.csv#  glide_consolidated.csv
docs/: DATASETS.md  NOTEBOOK_DATASETS.md  PAIRING.md  TABLES.md
event_lvl_data/: .~lock.event_Level_cleaned.csv#  event_Level_cleaned.csv
json/: impact_data_0.json
monty_data/: hazard_Data_cleaned.csv  impact_Data_cleaned.csv  monty_Info_cleaned.csv  taxonomies_cleaned.csv
notebooks/: data_inspector.ipynb  exploration.ipynb  new_sandbox.ipynb  notebook.py  process_sandbox.ipynb
output_data/: disaster_database_dummy_data.csv  streamlit_input_data_v2.csv
src/: csv_inspector.py  data_inspector.ipynb  doc_collumns.py  download_monty.py  exploration.py  flow_chart.drawio  flow_chart_final.drawio  flow_chart_v2.drawio  impact_data.py  metadata_monty.py  schema.drawio  unified_event_dictionary.py  unified_schema.json
src/adam/: combine_csv.py  wfp_adam_aws.py  wfp_adam_downloader.py  wfp_hdx.py
src/cerf/: cerf_schema.json  data_acquisition_scrape.py  data_normalisation_cerf.py
src/cerf_etl/: cerf_downloader.py
src/cgt/: cgt_etl.py  data_consolidation_dc.py  data_standardisation_dc.py  dictionary_events.py  schema.json
static_data/: country_name_iso3_table.csv  event_code_table.csv
(+60 files in other folders)
