[tool.poetry]
name = "template-poetry"
version = "0.1.0"
description = "This project serves as a template for initialising new Python projects with Poetry, including basic configuration for dependency management and virtual environment setup. It is designed to be cloned for quick setup of new repositories on GitHub."
authors = ["ediakatos <ediakatos@mapaction.org>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
gdacs-api = "^2.0.0"
selenium = "^4.27.1"
bs4 = "^0.0.2"
hdx-python-api = "^6.3.5"
geopandas = "^1.0.1"
pyarrow = "^18.1.0"
numpy = "^2.1.3"
pycountry = "^24.6.1"
geopy = "^2.4.1"
rapidfuzz = "^3.10.1"
tqdm = "^4.67.1"
jsonschema = "^4.23.0"
matplotlib = "^3.10.0"
circos = "^1.3.5"
pycirclize = "^1.8.0"
circlify = "^0.15.0"
azure-storage-blob = "^12.24.1"
azure-identity = "^1.19.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pymarkdownlnt = "^0.9.23"
pytest = "^8.3.3"
ruff = "^0.6.8"
ipykernel = "^6.29.5"
nbqa = "^1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
fix = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "S101", "ANN201", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
